[package]
name = "xv6fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-macro = "2.0.0"
bit_field = "0.10.0"
bitflags = "1.2.1"
array-const-fn-init = "0.1.1"
spin = "0.9.5"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
axlog={path="../arceos/modules/axlog"}