[package]
name = "fatfs-shim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfscore = { path = "../vfscore" }
fatfs = { git = "https://github.com/rafalh/rust-fatfs", rev = "a3a834e", default-features = false, features = [
    "alloc",
    "lfn",
    "log_level_trace",
    "unicode",
] }
spin = "0.9"
log = "0.4"